# yarco

./: Makefile  Makefile.am  Makefile.in  README.txt  Relatorio.tex  TODO  TODO.txt  autoTODO.txt  configure  configure.ac  configure.scan  logic.c  logic.h  main.c  main2.c  tests.c
class/: boat.c  boat.h  coral.c  coral.h  person.c  person.h  ship.c  ship.h
config/: Makefile  command_line.c  config.l  config.y  configuration.h  values.c  values_default.c
configuration/: Makefile  config.l  config.y  configuration.h  example.config  example_config.ini  values.c
headers/: common.h  types.h
lib/: class.c  class.h  common.c  common.h  configuration.c  configuration.h  graphics.c  graphics.h  graphics_terminal.c  object.c  object.h  objecttable.c  objecttable.h  passenger.c  passenger.h  person.c  person.h  persontable.c  persontable.h  physics.c  physics.h  report.c  report.h  stack.h  stackll.c  vector.c  vector.h
scripts/: indentall  indentallfromroot  ultimategetfromsvn  ultimategetfromsvnfromroot
