bin_PROGRAMS = Yarco

Yarco_SOURCES  = main.c logic.c class/asimov.h class/boat.c class/boat.h class/coral.c class/coral.h class/person.c class/person.h class/ship.c class/ship.h config/command_line.c config/configuration.h config/values.c lib/class.c lib/class.h lib/common.c lib/common.h lib/graphics.c lib/graphics.h lib/object.c lib/object.h objecttable.c lib/objecttable.h lib/report.c lib/report.h lib/vector.c lib/vector.h
